<resources>
    <string name="app_name">学他</string>
    <string name="img_description">主页背景图片</string>
    <string name="check_in">签到</string>
    <string name="go_to_study">开始学习</string>
    <string name="sum">统计</string>
    <string name="recall">回忆</string>
    <string name="userName">请输入账号</string>
    <string name="age">年龄</string>
    <string name="nickName">请输入昵称</string>
    <string name="password">输入密码</string>
    <string name="bindPhone">绑定手机号</string>
    <string name="verificationCode">发送验证码</string>
    <string name="verification">请输入验证码</string>
    <string name="passwordSec">再次输入密码</string>
    <string name="img_login">登录按钮</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="theRestTime">剩余时间:</string>
    <string name="complete">完成学习</string>
    <string name="send_message">发送</string>
    <string name="send_your_message">请输入要发送的内容</string>
    <string name="tongji">统计</string>

    <string name="back_btn">back_btn</string>
    <string name="head">大头</string>
    <string name="more">更多</string>
    <string name="name">姓名：</string>
    <string name="zihao">字号：</string>
    <string name="dynasty">朝代：</string>
    <string name="personintro">人物简介</string>
    <string name="title">人物详情</string>
    <string name="dot1">dot1</string>
    <string name="dot2">dot2</string>
    <string name="dot3">dot3</string>
    <string name="guide1">guide1</string>
    <string name="guide2">guide2</string>
    <string name="body">body</string>

    <string name="chatwithAI">聊天室</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_closer">关闭名言fragment</string>
    <string name="back">返回</string>
    <string name="chatting_notes">通讯录</string>
    <string name="circle_friends">朋友圈</string>
    <string name="register">新用户注册</string>
    <string name="registerImmediately">立即注册</string>
    <string name="newFriends">新朋友</string>
    <string name="friends">联系人</string>
    <string name="npcs">名人</string>
    <string name="group">群聊</string>
    <string name="userPortrait">用户头像</string>
    <string name="RegisterStandard">账号：8-16位数字\n
        密码：混合数字和英文字母，8-16\n
        昵称：汉字字母数字都可以，小于12位</string>

    <string name="yesterday">昨日人均?分钟</string>
    <string name="hobbies">跑步、足球、篮球、游泳、登山、羽毛球、钓鱼、品茶、书法、乐器、养花、看书、摄影、郊游、烘焙、唱歌、电影、美食、绘画、宠物</string>
    <string name="sum_time_group">累计时长p分钟</string>
    <string name="emergine_rule">1.成组两周内，当天人数满4人即自动进入\n 2.小组人员日均学习时长与目标设置完成率会影响榜单的位置哦~</string>
    <string name="general_rule">1.所有小组都有机会!\n 2.小组人员累积总时长是上榜决定性因素哦</string>
</resources>