<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/wrapper3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theRestTime"
            android:textColor="#fff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/background_item_sum"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_description"
            android:src="@drawable/img_start" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textColor="#fff"
        android:textSize="30sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/wrapper2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <Spinner
            android:id="@+id/sp_hour"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/hour"
            android:textColor="#000"
            android:textSize="25sp" />


        <Spinner
            android:id="@+id/sp_minute"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textColor="#000"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>