<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:ignore="MissingConstraints">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_image"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <ImageView
            android:id="@+id/bighead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/head1"
            android:contentDescription="@string/head"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#FAF2F0"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textview_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12.5dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#FAF2F0"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/zihao"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textview_zihao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12.5dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#FAF2F0"
            app:cardCornerRadius="16dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/dynasty"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textview_dynasty"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:textSize="18sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
