<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/com.example.huabei_competition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/check"
    android:orientation="vertical">

<include
    android:id="@+id/loading"
    android:visibility="gone"
    layout="@layout/loading"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/l2"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="430dp"
        android:background="?attr/selectableItemBackground"
        app:cardBackgroundColor="#FBF2EE"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingStart="15dp"
                android:src="@drawable/user2" />

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:drawablePadding="5dp"
                android:hint="@string/userName"
                android:inputType="text"
                android:textColor="#867676"
                android:textColorHint="#867676"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/l1"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="?attr/selectableItemBackground"
        app:cardBackgroundColor="#FBF2EE"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingStart="15dp"
                android:src="@drawable/password" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#867676"
                android:textColorHint="#867676"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btn_log"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/log"
        android:drawablePadding="2dp"
        android:onClick="log"
        android:textColor="#EFF1EC" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="goToRegister"
        android:text="@string/registerImmediately"
        android:textColor="#EFE7E3"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>