<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerVM"
            type="com.example.huabei_competition.RegisterVM" />

        <variable
            name="mContext"
            type="com.example.huabei_competition.ui.activity.RegisterActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/check">

        <ImageView
            android:id="@+id/iv_question"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:onClick="@{() -> mContext.onQuestionClick()}"
            android:src="@drawable/question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/loading"
            layout="@layout/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#FBF2EE"
                android:textSize="45sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:background="?attr/selectableItemBackground"
                app:cardBackgroundColor="#FBF2EE"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:paddingLeft="15dp"
                        android:src="@drawable/nickname" />

                    <EditText
                        android:id="@+id/et_nickName"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:drawablePadding="5dp"
                        android:hint="@string/nickName"
                        android:inputType="text"
                        android:text="@={registerVM.nickName}"
                        android:textColor="#867676"
                        android:textColorHint="#867676"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/userName"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="?attr/selectableItemBackground"
                app:cardBackgroundColor="#FBF2EE"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:paddingLeft="15dp"
                        android:src="@drawable/user2" />

                    <EditText
                        android:id="@+id/et_userName"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:drawablePadding="5dp"
                        android:hint="@string/userName"
                        android:inputType="text"
                        android:text="@={registerVM.userName}"
                        android:textColor="#867676"
                        android:textColorHint="#867676"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/password"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="?attr/selectableItemBackground"
                app:cardBackgroundColor="#FBF2EE"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:paddingStart="15dp"
                        android:src="@drawable/password" />


                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:drawablePadding="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={registerVM.password}"
                        android:textColor="#867676"
                        android:textColorHint="#867676"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/passwordSec"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="?attr/selectableItemBackground"
                app:cardBackgroundColor="#FBF2EE"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:paddingStart="15dp"
                        android:src="@drawable/password" />


                    <EditText
                        android:id="@+id/et_passwordSec"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:drawablePadding="5dp"
                        android:hint="@string/passwordSec"
                        android:inputType="textPassword"
                        android:text="@={registerVM.passSec}"
                        android:textColor="#867676"
                        android:textColorHint="#867676"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/phone"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="?attr/selectableItemBackground"
                app:cardBackgroundColor="#FBF2EE"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:paddingStart="15dp"
                        android:src="@drawable/phone" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:drawablePadding="5dp"
                        android:hint="@string/bindPhone"
                        android:inputType="phone"
                        android:text="@={registerVM.phoneNumber}"
                        android:textColor="#867676"
                        android:textColorHint="#867676"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <EditText
                        android:id="@+id/et_verification"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:hint="@string/verification"
                        android:inputType="number"
                        android:text="@={registerVM.verification}" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardCornerRadius="20dp">

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:background="@color/orange"
                        android:onClick="sendVerification"
                        android:text="@string/verificationCode"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:onClick="@{() -> mContext.onCancel()}"
                    android:text="取消"
                    android:textColor="#756868" />

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/shape"
                    android:onClick="@{() -> mContext.onConfirm()}"
                    android:text="确认"
                    android:textColor="#756868" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>